Handle Both Forms Apropriately On User Interaction

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                 </p>
             </form>
         </dialog>
-        <dialog>
+        <dialog id="projectDialog">
             <form method="dialog">
                 <p>
                     <label for="projectName">Project Name: </label>
