--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 </p>
                 <p>
                     <button id="todoCancel">Cancel</button>
-                    <button id="toDoConfirm">Confirm</button>
+                    <button id="todoConfirm">Confirm</button>
                 </p>
             </form>
         </dialog>
