Add Image And Styling

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 <body>
     <div id="container">
         <div class="sidebar">
+            <div class="profile">
+                <img src="./caveman-159359.svg" alt="profile image of the owner" class="profileimg" width="50" height="50">
+                <span>Stephen Asembo's Todo List</span>
+            </div>
             <div class="addEntries">
                 <button id="newProject">Create New Project</button>
                 <button id="newTodo">Create New Todo</button>    
