--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                 </p>
                 <p>
                     <label for="dueDate">Due date: </label>
-                    <input type="text" name="dueDate" id="dueDate">
+                    <input type="datetime-local" name="dueDate" id="dueDate">
                 </p>
                 <p>
                     Priority Level: 
