Perform Client Side Validation For Projects
The program shoukd not create projects with no names

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
             <form method="dialog">
                 <p>
                     <label for="projectName">Project Name: </label>
-                    <input type="text" name="projectName" id="projectName">
+                    <input type="text" name="projectName" id="projectName" required>
                 </p>
                 <p>
                     <button id="projectCancel">Cancel</button>
