--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <form method="dialog">
                 <p>
                     <label for="title">Title: </label>
-                    <input type="text" id="title" name="title">
+                    <input type="text" id="title" name="title" required>
                 </p>
                 <p>
                     <label for="description">Description: </label>
@@ -32,7 +32,7 @@
                 </p>
                 <p>
                     <label for="dueDate">Due date: </label>
-                    <input type="datetime-local" name="dueDate" id="dueDate">
+                    <input type="datetime-local" name="dueDate" id="dueDate" required>
                 </p>
                 <p>
                     Priority Level: 
@@ -45,7 +45,7 @@
                         <label for="important">Important</label>
                     </span>
                     <span>
-                        <input type="radio" value="lowImportance" id="lowImportance" name="priority">
+                        <input type="radio" value="lowImportance" id="lowImportance" name="priority" required>
                         <label for="lowImportance">Low Importance</label>
                     </span>
 
@@ -56,7 +56,7 @@
                 </p>
                 <p>
                     <label for="status">Task Status: </label>
-                    <input type="text" name="status" id="status">
+                    <input type="text" name="status" id="status" required>
                 </p>
                 <p>
                     <button id="todoCancel">Cancel</button>
