--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
                     Priority Level: 
                     <span>
                         <input type="radio" value="urgent" id="urgent" name="priority">
-                        <label for="urgent">Urgent</label>
+                        <label for="urgent">Low Importance</label>
                     </span>
                     <span>
                         <input type="radio" value="important" id="important" name="priority">
@@ -46,7 +46,7 @@
                     </span>
                     <span>
                         <input type="radio" value="lowImportance" id="lowImportance" name="priority" required>
-                        <label for="lowImportance">Low Importance</label>
+                        <label for="lowImportance">Urgent</label>
                     </span>
 
                 </p>
