Fix Wrong Matching Of Radio Buttons

--- a/src/index.html
+++ b/src/index.html
@@ -37,16 +37,16 @@
                 <p>
                     Priority Level: 
                     <span>
-                        <input type="radio" value="urgent" id="urgent" name="priority">
-                        <label for="urgent">Low Importance</label>
+                        <input type="radio" value="lowImportance" id="lowImportance" name="priority">
+                        <label for="lowImportance">Low Importance</label>
                     </span>
                     <span>
                         <input type="radio" value="important" id="important" name="priority">
                         <label for="important">Important</label>
                     </span>
                     <span>
-                        <input type="radio" value="lowImportance" id="lowImportance" name="priority" required>
-                        <label for="lowImportance">Urgent</label>
+                        <input type="radio" value="urgent" id="urgent" name="priority" required>
+                        <label for="urgent">Urgent</label>
                     </span>
 
                 </p>
