Make Additional Notes Optional

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,6 @@
                         <input type="radio" value="urgent" id="urgent" name="priority" required>
                         <label for="urgent">Urgent</label>
                     </span>
-
-                </p>
-                <p>
-                    <label for="notes">Additional Notes: </label>
-                    <input type="text" name="notes" id="notes">
                 </p>
                 <p id="task">
                     Task Status: 
@@ -68,6 +63,10 @@
                         <input type="radio" value="completed" id="completed" name="taskStatus" required>
                         <label for="completed">Completed</label>
                     </span>
+                </p>
+                <p>
+                    <span>Do you need to add an additional note ?</span>
+                    <button id="notesBtn">Add Notes</button>
                 </p>
                 <p>
                     <button id="todoCancel">Cancel</button>
