Collect User Notes Using A Text Area Box
The input may be long

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,17 @@
                 <p>
                     <span>Do you need to add an additional note ?</span>
                     <button id="notesBtn">Add Notes</button>
+                    <dialog id="notesDialog">
+                        <form method="dialog">
+                            <textarea id="notesTxt">
+
+                            </textarea>
+                            <p>
+                                <button id="notesCancel">Cancel</button>
+                                <button id="notesConfirm">Add Note</button>
+                            </p>
+                        </form>
+                    </dialog>
                 </p>
                 <p>
                     <button id="todoCancel">Cancel</button>
