--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
                 <button id="newProject">Create New Project</button>
                 <button id="newTodo">Create New Todo</button>    
             </div>
+            <div id="createdProjects"></div>
         </div>
 
         <div class="projects">
