--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div id="container">
         <div class="sidebar">
             <div class="profile">
-                <img src="./caveman-159359.svg" alt="profile image of the owner" class="profileimg" width="50" height="50">
+                <img src="./assets/images/caveman-159359.svg" alt="profile image of the owner" class="profileimg" width="50" height="50">
                 <span>Stephen Asembo's Todo List</span>
             </div>
             <div class="addEntries">
